--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="
+https://cdn.jsdelivr.net/npm/slideshow@1.2.2/slideshow-api.min.js
+"></script>
 </head>
 <body>
   <app-root></app-root>
